[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/gui/images/ui-elements-v1-1.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/ui-theme-main.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/Title-14-O1.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/gui/styles/sv-flat-tabs-label.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/gui/styles/sv-flat-tabs-panel.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/fonts/Text-10-O1.tres" type="DynamicFont" id=6]
[ext_resource path="res://interface/AccountDialog.gd" type="Script" id=7]
[ext_resource path="res://assets/square.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 202, 40, 10, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 292, 40, 10, 32 )

[node name="AccountDialog" type="Popup"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 7 )

[node name="AuthTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true

[node name="ColorOverlay" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color( 0.054902, 0.0470588, 0.0705882, 0.611765 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftBox" type="CenterContainer" parent="HBoxContainer"]
margin_right = 366.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MidleBox" type="MarginContainer" parent="HBoxContainer"]
margin_left = 370.0
margin_right = 590.0
margin_bottom = 540.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 4
custom_constants/margin_top = 24

[node name="RightBox" type="MarginContainer" parent="HBoxContainer"]
margin_left = 594.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 16
custom_constants/margin_bottom = 48

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/RightBox"]
margin_top = 16.0
margin_right = 366.0
margin_bottom = 492.0

[node name="TabContainer" type="TabContainer" parent="HBoxContainer/RightBox/CenterContainer"]
unique_name_in_owner = true
margin_left = 43.0
margin_top = 48.0
margin_right = 323.0
margin_bottom = 428.0
rect_min_size = Vector2( 280, 380 )
custom_styles/tab_fg = ExtResource( 4 )
custom_styles/tab_disabled = ExtResource( 4 )
custom_styles/tab_bg = ExtResource( 4 )
custom_styles/panel = ExtResource( 5 )

[node name="Actors" type="Tabs" parent="HBoxContainer/RightBox/CenterContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 38.0
margin_right = -16.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LinkBox" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox"]
margin_right = 288.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/CenterContainer"]
margin_left = 24.0
margin_top = 121.0
margin_right = 264.0
margin_bottom = 183.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
custom_constants/separation = 32

[node name="Title" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/CenterContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "> CONNECTING <"
align = 1

[node name="LoadingMsg" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/CenterContainer/VBoxContainer"]
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 48.0
margin_right = 240.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox"]
margin_top = 308.0
margin_right = 288.0
margin_bottom = 334.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 257.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/HBoxContainer"]
margin_left = 261.0
margin_right = 288.0
margin_bottom = 26.0
text = "x"
align = 2
icon_align = 1

[node name="ActorsBox" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LoginForm" type="CenterContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox"]
unique_name_in_owner = true
margin_right = 258.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm"]
margin_left = 19.0
margin_top = 30.0
margin_right = 239.0
margin_bottom = 254.0
rect_min_size = Vector2( 220, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
modulate = Color( 0.752941, 0.752941, 0.752941, 1 )
margin_right = 220.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "Credentials"
align = 1

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 20.0
margin_top = 24.0
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="EmaiInput" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
margin_top = 48.0
margin_right = 220.0
margin_bottom = 80.0

[node name="TRectLeft" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/EmaiInput"]
margin_right = 10.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="EmailInputEdit" type="LineEdit" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/EmaiInput"]
unique_name_in_owner = true
margin_left = 14.0
margin_right = 206.0
margin_bottom = 32.0
focus_next = NodePath("../../PassInput/PassInputEdit")
focus_previous = NodePath("../../LoginBtn/LogInBtn")
size_flags_horizontal = 3
align = 1
max_length = 64
placeholder_text = "E-Mail"
placeholder_alpha = 0.2
caret_blink = true
caret_blink_speed = 0.75

[node name="TRectRight" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/EmaiInput"]
margin_left = 210.0
margin_right = 220.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="PassInput" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
margin_top = 88.0
margin_right = 220.0
margin_bottom = 120.0

[node name="TRectLeft" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/PassInput"]
margin_right = 10.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="PassInputEdit" type="LineEdit" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/PassInput"]
unique_name_in_owner = true
margin_left = 14.0
margin_right = 206.0
margin_bottom = 32.0
focus_next = NodePath("../../LoginBtn/LogInBtn")
focus_previous = NodePath("../../EmaiInput/EmailInputEdit")
size_flags_horizontal = 3
align = 1
max_length = 128
secret = true
placeholder_text = "Pass"
placeholder_alpha = 0.2
caret_blink_speed = 0.75

[node name="TRectRight" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/PassInput"]
margin_left = 210.0
margin_right = 220.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
modulate = Color( 1, 1, 1, 0.25098 )
margin_left = 20.0
margin_top = 128.0
margin_right = 200.0
margin_bottom = 144.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="LoginBtn" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
margin_top = 152.0
margin_right = 220.0
margin_bottom = 184.0
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 45.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="TRectLeft" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn"]
margin_left = 49.0
margin_right = 59.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="LogInBtn" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn"]
unique_name_in_owner = true
margin_left = 63.0
margin_right = 156.0
margin_bottom = 32.0
focus_next = NodePath("../../EmaiInput/EmailInputEdit")
focus_previous = NodePath("../../PassInput/PassInputEdit")
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
disabled = true
shortcut_in_tooltip = false
text = "SIGN-IN"

[node name="TRectRight" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn"]
margin_left = 160.0
margin_right = 170.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 174.0
margin_right = 220.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="RegisterBtn" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer"]
margin_top = 192.0
margin_right = 220.0
margin_bottom = 224.0
size_flags_vertical = 4

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 38.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="TRectLeft" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn"]
margin_left = 42.0
margin_right = 52.0
margin_bottom = 32.0
texture = SubResource( 1 )

[node name="RegisterBtn" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn"]
unique_name_in_owner = true
margin_left = 56.0
margin_right = 163.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
disabled = true
shortcut_in_tooltip = false
text = "REGISTER"

[node name="TRectRight" type="TextureRect" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn"]
margin_left = 167.0
margin_right = 177.0
margin_bottom = 32.0
texture = SubResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 181.0
margin_right = 220.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="ActorsForm" type="MarginContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox"]
unique_name_in_owner = true
visible = false
margin_top = 228.0
margin_right = 288.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/ActorsForm"]
margin_top = 12.0
margin_right = 288.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Actors" type="ScrollContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/ActorsForm/VBoxContainer"]
margin_right = 288.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActorsList" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/ActorsForm/VBoxContainer/Actors"]
unique_name_in_owner = true
margin_right = 288.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="ActorsMsg" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox"]
unique_name_in_owner = true
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 288.0
margin_right = 258.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox"]
margin_top = 306.0
margin_right = 258.0
margin_bottom = 334.0

[node name="ActorsSlots" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_right = 120.0
margin_bottom = 28.0
rect_min_size = Vector2( 120, 14 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Mints: 0/0"
valign = 1
clip_text = true
max_lines_visible = 1

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 124.0
margin_right = 127.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="LogOutBtn" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.815686, 0.815686, 0.815686, 1 )
margin_left = 131.0
margin_right = 227.0
margin_bottom = 28.0
focus_mode = 0
custom_fonts/font = ExtResource( 6 )
text = "sign-out"
align = 2
icon_align = 1

[node name="CloseButton" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer"]
margin_left = 231.0
margin_right = 258.0
margin_bottom = 28.0
text = "x"
align = 2
icon_align = 1

[node name="LoadingBox" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox"]
margin_right = 288.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/CenterContainer"]
margin_left = 24.0
margin_top = 121.0
margin_right = 264.0
margin_bottom = 183.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 3
custom_constants/separation = 32

[node name="Title" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/CenterContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "> LOADING  <"
align = 1

[node name="LoadingMsg" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 48.0
margin_right = 240.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 14 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox"]
margin_top = 308.0
margin_right = 288.0
margin_bottom = 334.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 257.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/HBoxContainer"]
margin_left = 261.0
margin_right = 288.0
margin_bottom = 26.0
text = "x"
align = 2
icon_align = 1

[node name="History" type="Tabs" parent="HBoxContainer/RightBox/CenterContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 36.0
margin_right = -16.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/History"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransactionsEmpty" type="Label" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/History/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 0.627451, 0.627451, 0.627451, 1 )
margin_top = 69.0
margin_right = 258.0
margin_bottom = 81.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "No Transactions Found"
align = 1
valign = 1

[node name="Transactions" type="ScrollContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/History/VBoxContainer"]
margin_top = 155.0
margin_right = 258.0
margin_bottom = 306.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TransactionList" type="VBoxContainer" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/History/VBoxContainer/Transactions"]
unique_name_in_owner = true
margin_right = 258.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseBtn" type="Button" parent="HBoxContainer/RightBox/CenterContainer/TabContainer/History/VBoxContainer"]
margin_top = 310.0
margin_right = 258.0
margin_bottom = 336.0
text = "x"
align = 2
icon_align = 1

[connection signal="timeout" from="AuthTimer" to="." method="_on_auth_timer_timeout"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LinkBox/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="text_changed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/EmaiInput/EmailInputEdit" to="." method="_on_email_text_changed"]
[connection signal="text_entered" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/EmaiInput/EmailInputEdit" to="." method="_on_email_entered"]
[connection signal="text_changed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/PassInput/PassInputEdit" to="." method="_on_pass_text_changed"]
[connection signal="text_entered" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/PassInput/PassInputEdit" to="." method="_on_pass_entered"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/LoginBtn/LogInBtn" to="." method="_on_login_pressed"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/LoginForm/VBoxContainer/RegisterBtn/RegisterBtn" to="." method="_on_register_pressed"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer/LogOutBtn" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/ActorsBox/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/Actors/LoadingBox/HBoxContainer/CloseButton" to="." method="_on_close_pressed"]
[connection signal="pressed" from="HBoxContainer/RightBox/CenterContainer/TabContainer/History/VBoxContainer/CloseBtn" to="." method="_on_close_pressed"]
